SnapCompiler: Got rid of "possible 'this' escape" warning